--- a/demo_xyf/app.wxss
+++ b/demo_xyf/app.wxss
@@ -10,7 +10,7 @@ page,view,text,swiper,swiper-item,image,navigator{
 
 page{
   /* 定义主题颜色 */
-  --themeColor:#0094ff;
+  --themeColor:#91b4ff;
 
 
 }
