--- a/demo_xyf/components/searchPage/searchPage.wxml
+++ b/demo_xyf/components/searchPage/searchPage.wxml
@@ -1,4 +1,5 @@
 <view class="search_input">
+    <image class="searchImage" src="../../icon/search.png"></image>
     <navigator class="navigator" url="../../pages/article/article" open-type="navigate">
     搜索
     </navigator>
