--- a/demo_xyf/components/searchPage/searchPage.wxss
+++ b/demo_xyf/components/searchPage/searchPage.wxss
@@ -1,15 +1,23 @@
-.search_input{
-    height: 90rpx;
-    padding: 10rpx;
-    background-color: var(--themeColor);
-    
+.search_input {
+  height: 170rpx;
+  padding: 85rpx 10rpx 10rpx 10rpx;
+  background-color: var(--themeColor);
+  flex-direction: row;
+  display: flex;
 }
-.navigator{
-    height: 90%;
-    width: 100%;
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background-color: aliceblue;
-    border-radius: 15rpx;
+.search_input .navigator {
+  height: 90%;
+  width: 65%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: aliceblue;
+  border-radius: 35rpx;
+  color: var(--themeColor);
+  font-weight: 600;
+}
+.search_input .searchImage {
+  display: flex;
+  width: 9%;
+  height: 90%;
 }
