--- a/demo_xyf/components/tabs/tabs.wxml
+++ b/demo_xyf/components/tabs/tabs.wxml
@@ -1,21 +1,42 @@
-<view class="tabs">
-    <view class="tabs_title">
-        <view
+<!-- <scroll-view 
+    class="tabs"
+    scroll-x="true"
+    >
+    
+    <view
+        
+        wx:for="{{tabs}}"
+        wx:key="id"
+        class="tabs_item {{item.isActive?'active':''}}"
+        bindtap="handleItemTap"
+        data-index="{{index}}"
+
+    >
+    {{item.name}}        
+    </view>
+        
+    
+</scroll-view> -->
+<view class="skill-sequence-panel-content-wrapper"> 
+    <!-- 左边虚化 -->
+    <!-- <view class="hide-content-box hide-content-box-left"></view> -->
+    <!-- 右边虚化--> 
+    <view class="hide-content-box hide-content-box-right"></view>
+    <!--横向滚动-->
+    <scroll-view class="skill-sequence-panel-content" scroll-x>
+        <view 
             wx:for="{{tabs}}"
             wx:key="id"
-            class="tabs_item {{item.isActive?'active':''}}"
+            class="skill-sequence-skill-wrapper {{item.isActive?'active':''}}"
             bindtap="handleItemTap"
             data-index="{{index}}"
-
         >
-        {{item.name}}        
+        {{item.name}}
+        
+           
         </view>
-        <!-- <view class="tabs_item active" >Index</view>
-        <view class="tabs_item">Origin</view>
-        <view class="tabs_item">Devision</view>
-        <view class="tabs_item">About</view> -->
-    </view>
-    <view class="tabs_content">Content</view>
+        
+    </scroll-view>
 </view>
 
 <slot>
