--- a/demo_xyf/pages/login/login.wxml
+++ b/demo_xyf/pages/login/login.wxml
@@ -1,2 +1,15 @@
 <!--pages/login/login.wxml-->
+
+
 <text>pages/login/login.wxml</text>
+<view class="index_swiper">
+    <swiper autoplay indicator-dots circular>
+        <swiper-item wx:for="{{swiperList}}">
+            <navigator>
+                <image mode="cover" src="{{item}}"></image>
+            </navigator>
+
+        </swiper-item>
+
+    </swiper>
+</view>
